# bmi-sine-fortran

./: CMakeLists.txt  README.md  build.bash
Method1_and_Method2_src/: CMakeLists.txt  c_deserialize.c  c_serialize.c  iso_c_serializer.f90  serializer.h  state_serializer.f90
Method1_test/: CMakeLists.txt  fixtures.f90
Method2_test/: CMakeLists.txt  sample.cfg  test_method2.c  test_serialize_c.c
Method3_src/: CMakeLists.txt  c_deserializer.c  c_model_compare.c  c_model_compare.h  c_serializer.c  c_serializer.h
Method3_test/: CMakeLists.txt  test_method3.c
Method4_src/: CMakeLists.txt  serialize_state.c
Method4_test/: CMakeLists.txt  cat_89_bmi_config_cfe.txt  test_c_cfe_model.c  test_c_cfe_model.h  test_fortran_model.c
bmi_sine/: CMakeLists.txt  bmi_main.f90  bmi_sine.f90
c_serialization/: CMakeLists.txt  c_deserializer.c  c_deserializer.h  c_model_compare.c  c_model_compare.h  c_serializer.c  c_serializer.h
c_serialization_test/: CMakeLists.txt  c_serialization_test.c
cfe/: CMakeLists.txt  bmi_cfe.c
cfe_c_serializer/: CMakeLists.txt  serialize_state.c
examples/: test.cfg
include/: bmi_cfe.h
serialization/: CMakeLists.txt  c_deserialize.c  c_serialize.c  c_wrapper_test.c  iso_c_serializer.f90  serializer.f90  serializer.h  state_serializer.f90  ut_trim.c  ut_trim.h
serialization_test_c/: CMakeLists.txt  test_serialize_c.c  test_serialize_c.c~
serialization_tests/: sample.cfg  test_serialize.f90
sine/: CMakeLists.txt  main.f90  sine.f90
test_cfe_c_serializer/: CMakeLists.txt  test_cfe_c_serializer.c  test_fortran_model.h
